Bug 225498 - agenda view day labels do not match the day
Summary: agenda view day labels do not match the day
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-04 12:52 UTC by Martin Koller
Modified: 2021-07-07 00:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot showing shiftet labels (10.47 KB, image/png)
2010-02-04 12:56 UTC, Martin Koller
Details
Screenshot from 17.08.2. (22.22 KB, image/png)
2017-10-20 16:39 UTC, Markus
Details
eventviews-agendaview.patch (1.63 KB, patch)
2017-10-21 09:46 UTC, Markus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2010-02-04 12:52:00 UTC
Version:           4.4 rc2 (using 4.3.98 (KDE 4.3.98 (KDE 4.4 RC3)) "release 216", KDE:KDE4:Factory:Desktop / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (i686) release 2.6.31.8-0.1-desktop

The agenda view shows the day number of the month above the full-day event area. When such a day has a holiday name, which is wider than the day column below it, all further day number labels are simply shifted to the right and do no longer match the day.
See attached screenshot.

This is a regression (it worked once, but I'm not sure if my memory is from KDE3 days or already from an earlier KDE4 version)(
Comment 1 Martin Koller 2010-02-04 12:56:48 UTC
Created attachment 40527 [details]
screenshot showing shiftet labels
Comment 2 Denis Kurz 2016-09-24 18:54:27 UTC
This bug has only been reported for versions before 4.14, which have been unsupported for at least two years now. Can anyone tell if this bug still present?

If noone confirms this bug for a Framework-based version of korganizer (version 5.0 or later, as part of KDE Applications 15.08 or later), it gets closed in about three months.
Comment 3 Denis Kurz 2017-01-07 22:50:00 UTC
Just as announced in my last comment, I close this bug. If you encounter it again in a recent version (at least 5.0 aka 15.08), please open a new one unless it already exists. Thank you for all your input.
Comment 4 Martin Koller 2017-01-08 10:50:05 UTC
Still valid in 5.4.10 alpha1
Comment 5 Markus 2017-10-20 16:37:42 UTC
Still valid in apps 17.08.2 / plasma 5.11.1 / framework 5.39.0.
Comment 6 Markus 2017-10-20 16:39:54 UTC
Created attachment 108481 [details]
Screenshot from 17.08.2.
Comment 7 Markus 2017-10-20 17:06:28 UTC
I would think showing the appointments at the correct dates should be a major requirement. Cant believe this is unfixed for over seven years...
Comment 8 Markus 2017-10-21 09:02:47 UTC
The problem is in eventviews-17.08.2/src/agenda/agendaview.cpp.

There we use createDayLabels to setup all the labels with "AlternateLabel" and generate the "short version" to fit the topDayLabelBox, but that has no real size yet. (Actually the size is always 100.)

I see two options:
1. Generate three strings of fixed length and let AlternateLabel decide which one to choose.
2. Estimate the available size from e.g. mTopDayLabelsFrame and mSelectedDates. (This has do be redone on resize as well)
Comment 9 Markus 2017-10-21 09:46:05 UTC
Created attachment 108484 [details]
eventviews-agendaview.patch

This patch applies to eventviews-17.08.2 and fixes the issue for me.
Comment 10 Allen Winter 2017-10-21 19:24:25 UTC
patch looks fine but I'd like to be able to reproduce first.

How are you looking at 21 days at a time in agendaview?
Comment 11 Martin Koller 2017-10-21 21:13:14 UTC
Simply select 21 days in the left top month grid
Comment 12 Markus 2017-10-22 06:21:14 UTC
I also configured the "next x days" to be 21 days. So I can as well "Goto->Next 21 days".

Alternativly you could as well select less days and shrink the window horizontally.
Comment 13 Allen Winter 2017-10-22 13:52:45 UTC
thanks. in all my 15+ years working on KOrganizer I never ever used that option.  but I sorta like it :)

I'll review and test your patch.
Comment 14 Bug Janitor Service 2021-07-06 00:13:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/31
Comment 15 gjditchfield 2021-07-07 00:41:22 UTC
Git commit 36941c611c4c4ff45abc1af5c354853dedfa4c25 by Glen Ditchfield, on behalf of Glen Ditchfield.
Committed on 06/07/2021 at 00:15.
Pushed by gditchfield into branch 'master'.

Shorten holiday names to fit the Agenda view's header

If the Agenda view displays many days, holiday names may be too wide to
fit in their days' column headers, causing the misalignments reported in

This patch shortens the name to ft.  Original patch by m4rkusxxl at web.de.

M  +3    -3    src/agenda/agendaview.cpp

https://invent.kde.org/pim/eventviews/commit/36941c611c4c4ff45abc1af5c354853dedfa4c25