Shorten holiday names to fit the Agenda view's header

If the Agenda view displays many days, holiday names may be too wide to
fit in their days' column headers, causing the misalignments reported in
BUG: 225498

This patch shortens the name to ft.  Original patch by m4rkusxxl at web.de.